terminando as configurações css de hoje

--- a/projeto_Carros/index.html
+++ b/projeto_Carros/index.html
@@ -33,10 +33,58 @@
                     <img src="img/1.png" alt="imagem carro">
                 </div>
                 <div class="content">
-                    <p class="car-information">Único dono</p>
-                    <h2>Ferrari</h2>
-                    <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, corrupti quas ipsam perspiciatis sunt, nemo nobis et aspernatur neque, officia rerum. Natus cum fugiat magnam autem, inventore est distinctio excepturi.</p>
-                    <button class="information">Saiba Mais</button>
+                    <p class="car-information">
+                        Único dono
+                    </p>
+                    <h2>
+                        911 Turbo
+                    </h2>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, corrupti quas ipsam perspiciatis sunt, nemo nobis et aspernatur neque, officia rerum. Natus cum fugiat magnam autem, inventore est distinctio excepturi.
+                    </p>
+                    <button class="information">
+                        Saiba Mais
+                    </button>
+                </div>
+            </div>
+
+             <div class="item">
+                <div class="car-image">
+                    <img src="img/2.png" alt="imagem carro">
+                </div>
+                <div class="content">
+                    <p class="car-information">
+                        Conversível
+                    </p>
+                    <h2>
+                        Ferrari
+                    </h2>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, corrupti quas ipsam perspiciatis sunt, nemo nobis et aspernatur neque, officia rerum. Natus cum fugiat magnam autem, inventore est distinctio excepturi.
+                    </p>
+                    <button class="information">
+                        Saiba Mais
+                    </button>
+                </div>
+            </div>
+
+             <div class="item">
+                <div class="car-image">
+                    <img src="img/3.png" alt="imagem carro">
+                </div>
+                <div class="content">
+                    <p class="car-information">
+                        2015
+                    </p>
+                    <h2>
+                        Lamborghini
+                    </h2>
+                    <p class="description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, corrupti quas ipsam perspiciatis sunt, nemo nobis et aspernatur neque, officia rerum. Natus cum fugiat magnam autem, inventore est distinctio excepturi.
+                    </p>
+                    <button class="information">
+                        Saiba Mais
+                    </button>
                 </div>
             </div>
         </div>
