--- a/projeto_Carros/index.html
+++ b/projeto_Carros/index.html
@@ -26,9 +26,9 @@
         </nav>
     </header>
 
-    <section>
+    <section class="container">
         <div class="list">
-            <div class="item">
+            <div class="item active">
                 <div class="car-image">
                     <img src="img/1.png" alt="imagem carro">
                 </div>
@@ -91,8 +91,8 @@
 
 
         <div class="arrows">
-            <button><img src="./img/arrow.png" alt="seta esqueda"></button>
-            <button><img src="./img/arrow.png" alt="seta direita"></button>
+            <button id="prev"><img src="./img/arrow.png" alt="seta esqueda"></button>
+            <button id="next"><img src="./img/arrow.png" alt="seta direita"></button>
         </div>
 
         <div class="indicator">
@@ -104,5 +104,7 @@
             </ul>
         </div>
     </section>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
